# UAV-7412

./: platformio.ini
Basic Gyro/BasicGyro/: platformio.ini
Basic Gyro/BasicGyro/src/: main.cpp
BasicGyro/: Notes.md  platformio.ini
BasicGyro/include/: Aircraft.h  IServo.h  VectorOperations.h  utils.h
BasicGyro/include/Control/: Control.h  Remote.h
BasicGyro/include/IMU/: BaseIMU.h  IMU.h
BasicGyro/include/Regulator/: PID.h  Regulator.h
BasicGyro/src/: Aircraft.cpp  Aircraft.tpp  IServo.cpp  VectorOperations.cpp  main.cpp  utils.cpp
BasicGyro/src/Control/: Control.cpp  Remote.cpp
BasicGyro/src/IMU/: IMU.cpp
BasicGyro/src/Regulator/: PID.cpp
TX/: platformio.ini
TX/src/: main.cpp  main.cpp.bak  server.bak
cpp_test/: CMakeLists.txt  main.cpp
src/: main.cpp
